part-1/log-output/manifests/strip-prefix-mw.yaml
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: mw-stripprefix
spec:
  stripPrefix:
    prefixes:
      - /pingpong
