part-1/log-output/manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: logoutput-svc
spec:
  type: ClusterIP
  selector:
    app: logoutput
  ports:
  - port: 2346
    protocol: TCP
    targetPort: 4000
